# CheeseFramework

./: .gitignore  CNAME  DOC.md  LICENSE  README.md  README.txt  ahoj.txt  api.html  apiTest.html  appSettings.json  cheeser.py  cr.json  doc.html  index.html  mainTemplate.py  missingDoc.json  releaseDate.py  releaseDateCheese.py  releaseDocumentation.py  securitySettings.json  setup.cfg  smazat.py  test.html  test.md  test.py
.admin/: login.html
.github/: cleanAfterUpload.py  docBuild.py  pack.py  prepareMainBranch.py  promoteVersion.py  releaseDate.py  setCredentials.py  test.py  updateVersion.py
.github/workflows/: build.yml  docRelease.yml  pack.yml  (+4 more)
api/: apiTest.html  getMd.js  mdLoader.js  ms-viewer.css
calcul/: calcul.js
cheese/: ErrorCodes.py  Logger.py  __main__.py  appSettings.py  cheese.py  cheeseproperties.json  httpClientErrors.py  metadata.py  resourceManager.py  rowCounter.py  security.py  stats.py  variables.py
cheeseDocumentation/: documentation.html
cheeserScripts/: checkVersion.py  controllerBuilder.py  createApi.py  createByDb.py  generateApi.py  projectBuilder.py  projectGenerator.py  releaseDate.py  repositoriesBuilder.py
mdConverter/: README.md  apiTest.html  codeFormater.js  convertMd.js  custom.js  documentFormater.js  emojis.js  getMd.js  mdConverter.js  mdStyle.css  onScrollMan.js  pack.js  regConv.js  replacer.js  style.css
public/: docVersion.html  version  version.html
src/: authorization.py  mainTemplate.py
templates/: .gitignore  HelloWorldController.py  api.html  appSettings.json  authorization.py  mainTemplate.py
(+127 files in other folders)
