[metadata]
name = CheeseFramework
version = 1.1.45
author = Jakub Anderle
author_email = jakubanderle@outlook.cz
description = Framework for creating web applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KubaBoi/CheeseFramework/
project_urls =
    Bug Tracker = https://github.com/KubaBoi/CheeseFramework/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src